Fix bar overlapping and hover states (#192)
* Fix bar overlapping and hover states

* Change let to const for xposition

* Remove todo that has been implemented

* show how to highlight empty space past bar

--- a/app/assets/src/components/views/playgrounds/playground_viz.scss
+++ b/app/assets/src/components/views/playgrounds/playground_viz.scss
@@ -58,17 +58,17 @@
 
       .emptyBarSpace {
         &:hover ~ .fullBar {
-          fill-opacity: 1;
+          stroke: $primary;
         }
       }
 
       .fullBar {
-        fill: $success-medium;
+        fill: none;
       }
 
       .barPiece {
         &:hover {
-          fill: $primary;
+          stroke: $primary;
         }
       }
     }
