--- a/app/assets/src/components/visualizations/bar_charts/horizontal_stacked_bar_chart.scss
+++ b/app/assets/src/components/visualizations/bar_charts/horizontal_stacked_bar_chart.scss
@@ -36,17 +36,21 @@
 }
 
 .emptyBarSpace {
+  &:hover {
+    fill: $gray-off-white;
+    fill-opacity: 0.9;
+  }
   &:hover ~ .fullBar {
-    fill-opacity: 1;
+    stroke: $primary;
   }
 }
 
 .fullBar {
-  fill: $success-medium;
+  fill: none;
 }
 
 .barPiece {
   &:hover {
-    fill: $primary;
+    stroke: $primary;
   }
 }
